# swimtrack-ai

./: .dockerignore  .env.example  .env.native.example  .gitignore  .gitmodules  Dockerfile  README.md  compose.yaml  pyproject.toml
artifacts/models/: README.md
docs/: BENCHMARK_TEST_VIDEOS.md
scripts/: benchmark_test_videos.py  export_rtdetrv2_onnx.py
src/swimtrack_ai/: __init__.py  api.py  calibration.py  config.py  errors.py  identity.py  lap_analysis.py  main.py  schemas.py  service.py  tracker.py  video_decoder.py
src/swimtrack_ai/detectors/: __init__.py  base.py  factory.py  fake.py  tensorrt.py
tests/: test_api.py  test_benchmark_test_videos.py  test_bytetrack_weak_candidate_contract.py  test_calibration.py  test_config.py  test_engine_cache.py  test_identity.py  test_lap_analysis.py  test_service_batching.py  test_tensorrt_postprocess.py  test_video_api.py  test_video_decoder.py  test_weak_reactivation_service.py
