[project]
name = "swimtrack-ai"
version = "0.1.0"
description = "GPU RT-DETRv2 and ByteTrack batch inference service"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "cuda-bindings==13.0.3",
    "fastapi>=0.128.0,<1.0.0",
    "lap>=0.5.12,<1.0.0",
    "numpy>=1.26.4,<2.0.0",
    "opencv-python-headless>=4.11.0.86,<5.0.0",
    "python-multipart>=0.0.20,<1.0.0",
    "scipy>=1.15.0,<2.0.0",
    "uvicorn[standard]>=0.35.0,<1.0.0",
]

[project.optional-dependencies]
native-gpu = [
    "nvidia-cuda-runtime==13.0.96; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "tensorrt==10.13.3.9; sys_platform == 'linux' and platform_machine == 'x86_64'",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1,<1.0.0",
    "pytest>=8.4.0,<10.0.0",
    "pytest-cov>=6.2.0,<8.0.0",
    "ruff>=0.12.0,<1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
exclude-dependencies = ["nvidia-cuda-runtime-cu13"]

[tool.hatch.build.targets.wheel]
packages = ["src/swimtrack_ai"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py312"
extend-exclude = ["vendor"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
